--- a/frontend/app/spa-loading-template.html
+++ b/frontend/app/spa-loading-template.html
@@ -85,7 +85,7 @@
 
     <script>
         setTimeout(() => {
-            document.getElementById("loading").classList.add("fade-out");
+            document.getElementById("loading")?.classList.add("fade-out");
         }, 4000);
     </script>
 </body>
